--- a/jadwalpasaran.html
+++ b/jadwalpasaran.html
@@ -1429,7 +1429,7 @@
             {name: "CAROLINA EVENING", days: "Senin s/d Minggu", tutup: "11:17 WIB", buka: "11:22 WIB", website: "https://www.wral.com/entertainment/lottery/", live: null, prizeType: "price1"},
             {name: "HOKI DRAW 12", days: "Senin s/d Minggu", tutup: "11:59 WIB", buka: "12:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "BULLSEYE", days: "Senin s/d Minggu", tutup: "12:00 WIB", buka: "12:15 WIB", website: "https://mylotto.co.nz/results/bullseye", live: null, prizeType: "price1"},
-            {name: "POIPET 12", days: "Senin s/d Minggu", tutup: "12:15 WIB", buka: "12:30 WIB", website: "https://poipetlottery.com/", live: "https://www.youtube.com/@poipetlottery70/featured", prizeType: "price123"},
+            {name: "POIPET 12", days: "Senin s/d Minggu", tutup: "12:15 WIB", buka: "12:30 WIB", website: "https://poipetlottery.com/", live: "https://dlive.tv/PoipetPools", prizeType: "price123"},
             {name: "OREGON 12", days: "Senin s/d Minggu", tutup: "12:50 WIB", buka: "13:00 WIB", website: "https://www.oregonlottery.org/pick-4/winning-numbers/", live: null, prizeType: "price1"},
             {name: "HOKI DRAW 13", days: "Senin s/d Minggu", tutup: "12:59 WIB", buka: "13:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "TOTO MACAU SIANG", days: "Senin s/d Minggu", tutup: "13:00 WIB", buka: "13:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
@@ -1439,7 +1439,7 @@
             {name: "HOKI DRAW 15", days: "Senin s/d Minggu", tutup: "14:59 WIB", buka: "15:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "CHELSEA 15", days: "Senin s/d Minggu", tutup: "15:00 WIB", buka: "15:15 WIB", website: "https://chelseapools.co.uk/", live: null, prizeType: "price123"},
             {name: "TOTO MALI 1530", days: "Senin s/d Minggu", tutup: "15:15 WIB", buka: "15:30 WIB", website: "https://totomali.com/", live: "https://www.youtube.com/@TotoMaliLive", prizeType: "price123"},
-            {name: "POIPET 15", days: "Senin s/d Minggu", tutup: "15:15 WIB", buka: "15:30 WIB", website: "https://poipetlottery.com/", live: "https://www.youtube.com/@poipetlottery70/featured", prizeType: "price123"},
+            {name: "POIPET 15", days: "Senin s/d Minggu", tutup: "15:15 WIB", buka: "15:30 WIB", website: "https://poipetlottery.com/", live: "https://dlive.tv/PoipetPools", prizeType: "price123"},
             {name: "HOKI DRAW 16", days: "Senin s/d Minggu", tutup: "15:59 WIB", buka: "16:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "TOTO MACAU SORE", days: "Senin s/d Minggu", tutup: "16:00 WIB", buka: "16:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
             {name: "HUAHIN 1630", days: "Senin s/d Minggu", tutup: "16:15 WIB", buka: "16:30 WIB", website: "https://huahinlottery.com/", live: "https://www.youtube.com/@huahinlottery5727", prizeType: "price123"},
@@ -1451,7 +1451,7 @@
             {name: "HOKI DRAW 19", days: "Senin s/d Minggu", tutup: "18:59 WIB", buka: "19:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "TOTO MACAU MALAM I", days: "Senin s/d Minggu", tutup: "19:00 WIB", buka: "19:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
             {name: "CHELSEA 19", days: "Senin s/d Minggu", tutup: "19:00 WIB", buka: "19:15 WIB", website: "https://chelseapools.co.uk/", live: null, prizeType: "price123"},
-            {name: "POIPET 19", days: "Senin s/d Minggu", tutup: "19:30 WIB", buka: "19:45 WIB", website: "https://poipetlottery.com/", live: "https://www.youtube.com/@poipetlottery70/featured", prizeType: "price123"},
+            {name: "POIPET 19", days: "Senin s/d Minggu", tutup: "19:30 WIB", buka: "19:45 WIB", website: "https://poipetlottery.com/", live: "https://dlive.tv/PoipetPools", prizeType: "price123"},
             {name: "PCSO", days: "Minggu Libur", tutup: "19:50 WIB", buka: "20:10 WIB", website: "https://www.pcso.gov.ph/", live: "https://www.youtube.com/@PCSOGOVPHOfficial/streams", prizeType: "price1", activeDays: [1, 2, 3, 4, 5, 6]},
             {name: "HOKI DRAW 20", days: "Senin s/d Minggu", tutup: "19:59 WIB", buka: "20:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "TOTO MALI 2030", days: "Senin s/d Minggu", tutup: "20:15 WIB", buka: "20:30 WIB", website: "https://totomali.com/", live: "https://www.youtube.com/@TotoMaliLive", prizeType: "price123"},
@@ -1462,7 +1462,7 @@
             {name: "BRUNEI 21", days: "Senin s/d Minggu", tutup: "21:30 WIB", buka: "21:45 WIB", website: "https://bruneipools.com/", live: null, prizeType: "price123"},
             {name: "HOKI DRAW 22", days: "Senin s/d Minggu", tutup: "21:59 WIB", buka: "22:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "TOTO MACAU MALAM II", days: "Senin s/d Minggu", tutup: "22:00 WIB", buka: "22:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
-            {name: "POIPET 22", days: "Senin s/d Minggu", tutup: "22:30 WIB", buka: "22:45 WIB", website: "https://poipetlottery.com/", live: "https://www.youtube.com/@poipetlottery70/featured", prizeType: "price123"},
+            {name: "POIPET 22", days: "Senin s/d Minggu", tutup: "22:30 WIB", buka: "22:45 WIB", website: "https://poipetlottery.com/", live: "https://dlive.tv/PoipetPools", prizeType: "price123"},
             {name: "HOKI DRAW 23", days: "Senin s/d Minggu", tutup: "22:59 WIB", buka: "23:00 WIB", website: "https://hokidraw.com/", live: "https://dlive.tv/u/HOKIDRAW", prizeType: "price1"},
             {name: "HONGKONG", days: "Senin s/d Minggu", tutup: "22:59 WIB", buka: "23:15 WIB", website: "https://hongkongfunlotto.net/", live: "https://kick.com/hongkong-lotto-official", prizeType: "price123"},
             {name: "TOTO MACAU MALAM III", days: "Senin s/d Minggu", tutup: "23:00 WIB", buka: "23:15 WIB", website: "https://totomacaunew.us/", live: "https://kick.com/live-ttm4d", prizeType: "price1"},
