--- a/jadwalpasaran.html
+++ b/jadwalpasaran.html
@@ -1914,18 +1914,18 @@
 
         function getShio(number) {
             const shioTable = {
-                "ULAR": [1, 13, 25, 37, 49, 61, 73, 85, 97],
-                "NAGA": [2, 14, 26, 38, 50, 62, 74, 86, 98],
-                "KELINCI": [3, 15, 27, 39, 51, 63, 75, 87, 99],
-                "HARIMAU": [4, 16, 28, 40, 52, 64, 76, 88, 0],
-                "KERBAU": [5, 17, 29, 41, 53, 65, 77, 89],
-                "TIKUS": [6, 18, 30, 42, 54, 66, 78, 90],
-                "BABI": [7, 19, 31, 43, 55, 67, 79, 91],
-                "ANJING": [8, 20, 32, 44, 56, 68, 80, 92],
-                "AYAM": [9, 21, 33, 45, 57, 69, 81, 93],
-                "MONYET": [10, 22, 34, 46, 58, 70, 82, 94],
-                "KAMBING": [11, 23, 35, 47, 59, 71, 83, 95],
-                "KUDA": [12, 24, 36, 48, 60, 72, 84, 96]
+                "KUDA": [1, 13, 25, 37, 49, 61, 73, 85, 97],
+                "ULAR": [2, 14, 26, 38, 50, 62, 74, 86, 98],
+                "NAGA": [3, 15, 27, 39, 51, 63, 75, 87, 99],
+                "KELINCI": [4, 16, 28, 40, 52, 64, 76, 88, 00],
+                "HARIMAU": [5, 17, 29, 41, 53, 65, 77, 89],
+                "KERBAU": [6, 18, 30, 42, 54, 66, 78, 90],
+                "TIKUS": [7, 19, 31, 43, 55, 67, 79, 91],
+                "BABI": [8, 20, 32, 44, 56, 68, 80, 92],
+                "ANJING": [9, 21, 33, 45, 57, 69, 81, 93],
+                "AYAM": [10, 22, 34, 46, 58, 70, 82, 94],
+                "MONYET": [11, 23, 35, 47, 59, 71, 83, 95],
+                "KAMBING": [12, 24, 36, 48, 60, 72, 84, 96]
             };
             
             const lastTwo = parseInt(number.toString().slice(-2));
