Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -810,14 +810,14 @@
             </article>
         </div>
         
-        <!-- No Results Message -->
-        <div class="no-results" id="no-results">
-            <div class="no-results__icon">
-                <i class="fas fa-search"></i>
+            <!-- Generator Password -->
+            <div class="shortcut-item" data-name="generator password" data-category="tools">
+                <div class="shortcut-icon">
+                    <i class="fas fa-key"></i>
+                </div>
+                <div class="shortcut-name">Generator Password</div>
+                <a href="https://leo07.vercel.app/generator-password.html" target="_blank" style="display: none;"></a>
             </div>
-            <p>Tidak ada shortcut yang ditemukan</p>
-        </div>
-    </div>
     
     <!-- Footer -->
     <footer class="footer">
@@ -1230,4 +1230,5 @@
     </script>
 </body>
 </html>
+
 
