--- a/scriptbola.html
+++ b/scriptbola.html
@@ -255,7 +255,7 @@
     <div class="header">
         <img class="logo" src="https://hokben38422.com/resources/images/logo.png" alt="HOKBENTOTO Logo">
         <h1>HOKBENTOTO GENERATOR</h1>
-        <p>Gold Black Edition — Auto Team Logo: TheSportsDB → Google Sheets DB → SVG</p>
+        <p>Gold Black Edition — Auto Team Logo</p>
     </div>
 
     <!-- AUTO DATE -->
